@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 2014-10-30  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.0.19 released.
@@ -14,6 +15,12 @@
 2014-10-26  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.0.17 released.
+=======
+2014-11-02  Carl Hetherington  <cth@carlh.net>
+
+	* Be more tolerant of some FFmpeg audio decoding errors;
+	should fix #352.
+>>>>>>> fc8fb8f... Process decoded audio even if avcodec_decode_audio4 returns an error, as there are cases where it produces good data and then returns an error.
 
 2014-10-26  Carl Hetherington  <cth@carlh.net>
 
